--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
         {{ JSGlue.include() }}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="https://d3js.org/d3.v4.min.js"></script>
+        <title>~Doodler~</title>
     </head>
     <body>
     	<div id="wrapper">
